<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.thecongers.gardenthingmobile.MainActivity">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_temperature_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/temperature_label"/>
            <TextView
                android:id="@+id/tv_humidity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/humidity_label"/>
            <TextView
                android:id="@+id/tv_ambient_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ambient_label"/>
            <TextView
                android:id="@+id/tv_ir_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ir_label"/>
            <TextView
                android:id="@+id/tv_lux_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/lux_label"/>
            <TextView
                android:id="@+id/tv_co2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/co2_label"/>
            <TextView
                android:id="@+id/tv_soil_moisture1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text=""/>
            <TextView
                android:id="@+id/tv_soil_moisture2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text=""/>
            <TextView
                android:id="@+id/tv_soil_moisture3_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickTemperature"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickHumidity"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_ambient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickAmbient"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_ir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickIr"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_lux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickLux"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_co2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickCo2"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_soil_moisture1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickSoilMoisture1"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_soil_moisture2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickSoilMoisture2"
                android:clickable="true"/>
            <TextView
                android:id="@+id/tv_soil_moisture3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:onClick="onClickSoilMoisture3"
                android:clickable="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>